Update success message for House Burger optimization analysis

--- a/House Burger (ESP).ipynb
+++ b/House Burger (ESP).ipynb
@@ -932,7 +932,7 @@
     "        exportar_resultados_a_excel(modelo)\n",
     "        \n",
     "        print(\"\\n🎉 ¡ANÁLISIS DE SENSIBILIDAD COMPLETADO!\")\n",
-    "        print(\"¡Tu House Burger está ahora óptimamente planificada para la semana!\")\n",
+    "        print(\"¡La operación de House Burger está ahora óptimamente planificada para la semana!\")\n",
     "    else:\n",
     "        print(\"\\n❌ ¡ANÁLISIS DE SENSIBILIDAD FALLÓ!\")\n",
     "        print(\"Por favor verifica la formulación del problema y las restricciones.\")"
