Add initial inventory details and update inventory dynamics for House Burger analysis
- Introduced a new section displaying the initial stock of ingredients for both Spanish and English versions.
- Updated the inventory dynamics equations to reflect calculations for the first two days and adjusted the remaining days accordingly.
- Modified output messages to enhance clarity and user engagement.

--- a/House Burger (ESP).ipynb
+++ b/House Burger (ESP).ipynb
@@ -288,6 +288,18 @@
     "<tr><td>Aceite (Galón)</td><td>4.0</td></tr>\n",
     "</table>\n",
     "\n",
+    "**Inventario inicial por producto**\n",
+    "\n",
+    "<table align=\"center\">\n",
+    "<tr><th>Ingrediente</th><th><em>sᵢ₀</em></th></tr>\n",
+    "<tr><td>Panes (Unidad)</td><td>550</td></tr>\n",
+    "<tr><td>Carne (Hamburguesa)</td><td>150</td></tr>\n",
+    "<tr><td>Pollo (Pechuga)</td><td>150</td></tr>\n",
+    "<tr><td>Papas (Unidad)</td><td>200</td></tr>\n",
+    "<tr><td>Aceite (Galón)</td><td>5</td></tr>\n",
+    "</table>\n",
+    "\n",
+    "\n",
     "**Uso de ingredientes por producto**\n",
     "\n",
     "Sea <em>q</em>ᵢₚ la cantidad del ingrediente <em>i</em> usado para hacer una unidad del producto <em>p</em>:\n",
@@ -358,16 +370,16 @@
     "\n",
     "### 2. Dinámica del Inventario\n",
     "\n",
-    "Para el primer día (<em>t = 1</em>):\n",
+    "Para los dos primeros días:\n",
     "\n",
     "$$\n",
-    "s_{i1} = s_{i0} - \\sum_{p \\in P} q_{ip} \\cdot x_{p1} \\quad \\forall i \\in I\n",
+    "s_{it} = s_{i(t-1)} - \\sum_{p \\in P} q_{ip} \\cdot x_{p1} \\quad \\forall i \\in I, \\ t \\in \\lbrace 1,2 \\rbrace\n",
     "$$\n",
     "\n",
-    "Para los días restantes (<em>t > 1</em>), considerando 2 días de retraso en la entrega:\n",
+    "Para los días restantes (<em>t > 2</em>), considerando 2 días de retraso en la entrega:\n",
     "\n",
     "$$\n",
-    "s_{it} = s_{i(t-1)} - \\sum_{p \\in P} q_{ip} \\cdot x_{pt} + y_{i(t-2)} \\quad \\forall i \\in I,\\ t = 2,3,\\dots,7\n",
+    "s_{it} = s_{i(t-1)} - \\sum_{p \\in P} q_{ip} \\cdot x_{pt} + y_{i(t-2)} \\quad \\forall i \\in I,\\ t \\in \\lbrace 3,4,\\dots,7 \\rbrace\n",
     "$$\n",
     "\n",
     "\n",
@@ -932,7 +944,7 @@
     "        exportar_resultados_a_excel(modelo)\n",
     "        \n",
     "        print(\"\\n🎉 ¡ANÁLISIS DE SENSIBILIDAD COMPLETADO!\")\n",
-    "        print(\"¡La operación de House Burger está ahora óptimamente planificada para la semana!\")\n",
+    "        print(\"¡Tu House Burger está ahora óptimamente planificada para la semana!\")\n",
     "    else:\n",
     "        print(\"\\n❌ ¡ANÁLISIS DE SENSIBILIDAD FALLÓ!\")\n",
     "        print(\"Por favor verifica la formulación del problema y las restricciones.\")"
