--- a/House Burger.ipynb
+++ b/House Burger.ipynb
@@ -286,6 +286,17 @@
     "<tr><td>Oil (Gallon)</td><td>4.0</td></tr>\n",
     "</table>\n",
     "\n",
+    "**Initial stock per product**\n",
+    "\n",
+    "<table align=\"center\">\n",
+    "<tr><th>Ingredient</th><th><em>sᵢ₀</em></th></tr>\n",
+    "<tr><td>Buns (Unit)</td><td>550</td></tr>\n",
+    "<tr><td>Beef (Patty)</td><td>150</td></tr>\n",
+    "<tr><td>Chicken (Breast)</td><td>150</td></tr>\n",
+    "<tr><td>Potatoes (Unit)</td><td>200</td></tr>\n",
+    "<tr><td>Oil (Gallon)</td><td>5</td></tr>\n",
+    "</table>\n",
+    "\n",
     "**Ingredient usage per product**\n",
     "\n",
     "Let <em>q</em>ᵢₚ be the amount of ingredient <em>i</em> used to make one unit of product <em>p</em>:\n",
@@ -356,16 +367,16 @@
     "\n",
     "### 2. Inventory Dynamics\n",
     "\n",
-    "For the first day (<em>t = 1</em>):\n",
+    "For the first two days:\n",
     "\n",
     "$$\n",
-    "s_{i1} = s_{i0} - \\sum_{p \\in P} q_{ip} \\cdot x_{p1} \\quad \\forall i \\in I\n",
+    "s_{it} = s_{i(t-1)} - \\sum_{p \\in P} q_{ip} \\cdot x_{p1} \\quad \\forall i \\in I, \\ t \\in \\lbrace 1,2 \\rbrace\n",
     "$$\n",
     "\n",
-    "For the remaining days (<em>t > 1</em>), considering 2-day delivery delay:\n",
+    "For the remaining days (<em>t > 2</em>), considering 2-day delivery delay:\n",
     "\n",
     "$$\n",
-    "s_{it} = s_{i(t-1)} - \\sum_{p \\in P} q_{ip} \\cdot x_{pt} + y_{i(t-2)} \\quad \\forall i \\in I,\\ t = 2,3,\\dots,7\n",
+    "s_{it} = s_{i(t-1)} - \\sum_{p \\in P} q_{ip} \\cdot x_{pt} + y_{i(t-2)} \\quad \\forall i \\in I,\\ t \\in \\lbrace 3,4,\\dots,7 \\rbrace\n",
     "$$\n",
     "\n",
     "\n",
